--- a/src/custom.css
+++ b/src/custom.css
@@ -1,6 +1,11 @@
 
 .nav_super {
-    background-color: var(--var-header-bg) !important;
+    background-color: var(--var-header-bg) !important ;
+}
+
+.item_table th,  .item_table td {
+    background-color: var(--var-body-bg);
+    color: var(--var-body-fc)
 }
 
 .nav_container {
@@ -19,6 +24,7 @@
 }
 
 .round_button {
+    background-color: var(  --var-button-all-bg);
     width: 2.4rem;
     height: 2.4rem;
     display: flex;
@@ -29,6 +35,7 @@
 
 .round_icon {
     margin: auto;
+   
 }
 
 .button_container {
@@ -40,7 +47,14 @@
 }
 
 .submit_button {
-    margin: 1rem 0;
+    margin: 1rem 0 0;
+    background-color: var( --var-button-all-bg);
+    border: none;
+}
+
+.button_link {
+   color: var(--var-body-fc);
+
 }
 
 .header_icon {
@@ -89,6 +103,9 @@
 .button {
     margin-left: 1rem;
     text-wrap: nowrap;
+    background-color: var( --var-body-fc);
+    color: var(--var-body-bg);
+    border: none;
 }
 
 
@@ -137,13 +154,34 @@
 .tabstyle {
     width: 80vw;
     margin: 0 auto;   
+    max-width: 1100px;
 }
 
-.breadcrump {
+.custom-tabs .nav-link.active {
+
+    background-color: var(--var-body-bg);
+    color: var(--var-body-fc);
+    border-radius: 0.2rem 0.2rem 0 0 ;
+    border: 1px solid var(--var-border-tabs);
+}
+
+.custom-tabs .nav-link {
+    background-color: var(--var-body-bg);
+    color: var(--var-body-fc);
+    border-radius: 0.2rem 0.2rem 0 0 ;
+    border: none;
+  }
+
+
+
+.breadcrump  {
     margin-top: 10rem;
     width: 60vw;
     max-width: 1100px;
+}
 
+.breadcrump a, .breadcrumb-item, .breadcrumb-item+.breadcrumb-item::before {
+    color: var(--var-breadcrump-fc) impor
 }
 
 
@@ -193,13 +231,12 @@
 }
 
 .form_container {
-    max-width: 30vw;
+
+    max-width: 20rem;
     margin: 4rem auto;
     padding: 2rem;
     border: 1px solid rgba(23, 23, 23, 0.15);
     border-radius: 1rem;
+    background-color: var(--var-card-bg);
 }
 
-.form_container {
-    max-width: 20rem;
-}
